# ManiSkill

./: .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CITATION_MS2.cff  CONTRIBUTING.md  README.md  maniskill_3_to_maniskill_4_migration.md  pyproject.toml  setup.py
.github/workflows/: publish-nightly.yml
docker/: Dockerfile
docs/: generate_robot_docs.py  generate_task_docs.py  requirements.txt
docs/source/: conf.py  index.md
docs/source/_static/: version_switcher.json
docs/source/roadmap/: index.md
docs/source/tasks/: index.md
docs/source/user_guide/: index.md
examples/baselines/experimental/: README.md
examples/baselines/ppo/: README.md
examples/baselines/sac/: README.md
examples/baselines/stable_baselines3/: README.md
examples/maniskill_template/: reproducibility_checklist.md  run_metadata.example.json  sample_episode_trace.jsonl
examples/tutorials/: README.md
mani_skill/: __init__.py
mani_skill/agents/: multi_agent.py
mani_skill/agents/controllers/: pd_ee_pose.py
mani_skill/agents/robots/: __init__.py
mani_skill/envs/: base_env.py  sapien_env.py  template.py
mani_skill/envs/tasks/: __init__.py
mani_skill/examples/: demo_random_action.py
mani_skill/examples/teleoperation/: teleop.py
mani_skill/sim/: base_sim.py
mani_skill/sim/builders/: __init__.py  actor.py  articulation.py  base_builder.py
mani_skill/sim/sapien/: __init__.py  actor_builder.py  articulation_builder.py  sim.py
mani_skill/trajectory/: replay_trajectory.py
mani_skill/utils/: download_asset.py  gym_utils.py  sapien_utils.py
mani_skill/utils/assets/: data.py
mani_skill/utils/building/: _mjcf_loader.py  actor_builder.py
mani_skill/utils/geometry/: geometry.py
mani_skill/utils/structs/: actor.py  types.py
mani_skill/vector/wrappers/: sb3.py
scripts/data_generation/: replay_for_il_baselines.sh
(+107 files in other folders)
